# NNet-assistant

./: .gitignore  .gitignore.orig  AutoUnitTests  AutoUnitTests.cc  AutoUnitTests.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.orig  NNet-assistant.sublime-project  NNet-assistant.sublime-project.orig  NNet-assistant.sublime-workspace  NNet-assistant.sublime-workspace.orig  README.md  cmake_install.cmake  main  startProject.sh
Testing/Temporary/: CTestCostData.txt  CTestCostData.txt.orig  LastTest.log.orig
src/: layer.cpp  layer.h  neuron.cpp  neuron.h  tig.h
test/: layer_test.h  neuron_test.h  tigTest.h  tig_test.h
